--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     -->
     <title>MTrade</title>
   </head>
-  <body style="background-color: #1a202b">
+  <body style="background-color: #1a202b; overflow-y: hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
